language/move-lang/tests/move_check/naming/generics_with_type_parameters.exp
error: 

   ┌── tests/move_check/naming/generics_with_type_parameters.move:2:22 ───
   │
 2 │     struct S<T> { f: T<u64> }
   │                      ^^^^^^ Generic type parameters cannot take type arguments
   │

error: 

   ┌── tests/move_check/naming/generics_with_type_parameters.move:3:19 ───
   │
 3 │     fun foo<T>(x: T<bool>): T<u64> {}
   │                   ^^^^^^^ Generic type parameters cannot take type arguments
   │

error: 

   ┌── tests/move_check/naming/generics_with_type_parameters.move:3:29 ───
   │
 3 │     fun foo<T>(x: T<bool>): T<u64> {}
   │                             ^^^^^^ Generic type parameters cannot take type arguments
   │

