language/move-lang/tests/move_check/naming/generics_with_type_parameters.move
module M {
    struct S<T> { f: T<u64> }
    fun foo<T>(x: T<bool>): T<u64> {}
}
